Dark mode menu fix

--- a/css/_main-only-normal.scss
+++ b/css/_main-only-normal.scss
@@ -1970,9 +1970,7 @@ table {
 		}
 	}
 
-	/*
 	label {
-		color: #105ab2;
+		color: #1e2933;
 	}
-	*/
 }
